projects/compiler/test/parser/accessor_error_eof.out
Error at %FILE_NAME%:1:3
Unexpected end of file:
  |  a.
       ^